assets/css/site.css
/* ... */
.read-more-link:hover {
  color: #333;
}

.content-wrapper {
  margin-top: 20px;
}

.blog-title {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 22px;
  line-height: 26px;
}

.white-wrapper {
  color: #b6cbe0;
  background-color: #fff;
  border-radius: 5px;
  padding: 20px;
  box-shadow: 0 0 0 1px #0000000f;
}

.circle-profile {
  border-radius: 500px;
  width: 70%;
  margin-bottom: 28px;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.small-heading {
  color: #333;
  text-align: left;
  margin-top: 0;
  margin-bottom: 5px;
  font-size: 16px;
  line-height: 135%;
}

.small-post-link {
  color: #aaa;
  text-align: left;
  margin-bottom: 15px;
  text-decoration: none;
  display: inline-block;
}

.small-post-link:hover {
  color: #333;
}

.feature-posts-list {
  margin-bottom: -15px;
}

.white-bg-heading {
  background-color: #fff;
  border-radius: 5px;
  margin-bottom: 30px;
  padding: 14px;
  box-shadow: 0 0 0 1px #0000000f;
}

.content-column {
  padding-left: 20px;
}

.blog-page-image {
  background-image: url("https://d3e54v103j8qbb.cloudfront.net/img/background-image.svg");
  background-position: 50%;
  background-repeat: no-repeat;
  background-size: cover;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  height: 290px;
}

.sidebar-on-mobile {
  padding-top: 40px;
  display: none;
}

.details-wrapper {
  margin-top: 8px;
  margin-bottom: 8px;
}

.link {
  color: #757575;
}

.text-block {
  color: var(--steel-blue-2);
  margin-top: 10px;
  font-style: normal;
}

.text-block-2 {
  color: #2e80b6;
}

.all-links {
  color: var(--steel-blue-2);
}

.image {
  max-width: 30%;
  font-size: 20px;
  line-height: 20%;
}

.image-2 {
  outline-offset: 0px;
  text-align: left;
  outline: 3px #d9d9d9;
  text-decoration: none;
  display: inline-block;
  position: fixed;
}

.columns {
  display: block;
}

.heading {
  margin-top: 20px;
  margin-bottom: 0;
}

.text-block-3 {
  color: #aaa;
  margin-top: 15px;
  margin-bottom: 0;
  font-size: 13px;
  line-height: 180%;
}

.paragraph {
  text-align: justify;
  background-color: #e4f0f6;
  margin-bottom: 40px;
}

.heading-2 {
  background-color: #fff0;
  margin-top: 0;
  margin-bottom: 5px;
}

.div-block {
  background-color: #fff;
  border-radius: 5px;
  margin-bottom: 20px;
  padding: 20px;
  line-height: 200%;
  display: block;
  overflow: visible;
}

.heading-3 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 22px;
}

.paragraph-2 {
  color: #aaa;
  text-align: justify;
  margin-bottom: 0;
  overflow: visible;
}

.text-block-4 {
  color: #aaa;
  font-size: 14px;
}

.heading-4 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 22px;
}

.text-block-5 {
  color: #aaa;
  font-size: 14px;
}

.column {
  padding-left: 0;
}

.image-3 {
  margin-top: 4px;
}

.heading-5 {
  margin-top: 10px;
  margin-bottom: 10px;
}

.heading-6 {
  margin-bottom: 0;
  font-weight: 700;
}

.heading-7 {
  margin-top: 20px;
  margin-bottom: 0;
}

.italic-text, .italic-text-2, .italic-text-3, .italic-text-4, .italic-text-5, .italic-text-6, .italic-text-7, .italic-text-8 {
  color: var(--webstyledarkblue);
}

.div-block-2 {
  background-color: #fff;
  padding-right: 40px;
}

.image-4 {
  margin: 30px 20px 20px;
  overflow: clip;
}

.image-5, .image-6 {
  margin: 20px;
}

.heading-8 {
  margin-bottom: 10px;
  margin-left: 30px;
  padding-top: 30px;
  font-family: Palatino Linotype, Book Antiqua, Palatino, serif;
}

.italic-text-9 {
  color: var(--webstyledarkblue);
}

.heading-9 {
  margin-top: 0;
}

.text-block-6 {
  margin-bottom: 10px;
}

.text-block-7, .text-block-8 {
  margin-top: 10px;
  margin-bottom: 5px;
}

.italic-text-10 {
  color: var(--webstyledarkblue);
}

.bold-text, .bold-text-2, .bold-text-3 {
  color: var(--steel-blue);
}

.text-block-9 {
  margin-top: 10px;
}

.image-7 {
  text-align: center;
  margin-top: 0;
  margin-bottom: 10px;
  margin-left: auto;
}

.image-8 {
  text-align: center;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: auto;
}

.paragraph-3 {
  font-size: 13px;
}

.paragraph-4 {
  color: var(--dim-gray-3);
  margin-bottom: 25px;
  font-size: 13px;
}

.image-9 {
  margin-top: 10px;
}

.italic-text-11, .italic-text-12, .italic-text-13, .italic-text-14 {
  color: var(--steel-blue);
}

.paragraph-5 {
  margin-top: 5px;
  margin-bottom: 10px;
}

.text-block-10, .text-block-11, .text-block-12 {
  margin-top: 25px;
}

.paragraph-6 {
  margin-top: 5px;
  margin-bottom: 10px;
}

.italic-text-15, .italic-text-16, .italic-text-17, .italic-text-18 {
  color: var(--steel-blue);
}

.image-10 {
  margin-bottom: 10px;
}

.text-block-13 {
  color: var(--steel-blue-2);
  margin-top: 40px;
}

.heading-10 {
  margin-top: 0;
  margin-bottom: 10px;
}

.paragraph-7 {
  margin-top: 5px;
  margin-bottom: 10px;
}

.image-11 {
  margin-bottom: 10px;
}

.italic-text-19 {
  color: var(--firebrick);
}

.text-block-14 {
  margin-top: 40px;
  margin-bottom: 40px;
}

.paragraph-8 {
  margin-top: 5px;
  margin-bottom: 10px;
}

.italic-text-20, .italic-text-21 {
  color: var(--steel-blue);
}

.image-12 {
  margin-bottom: 10px;
}

.paragraph-9 {
  margin-bottom: 15px;
}

.paragraph-10 {
  background-color: var(--white-smoke);
  margin-top: 10px;
}

.bold-text-4 {
  color: var(--steel-blue);
}

.paragraph-11 {
  background-color: var(--white-smoke);
  margin-bottom: 50px;
}

.image-13 {
  margin-bottom: 20px;
}

.text-block-15, .text-block-16 {
  margin-top: 25px;
  margin-bottom: 5px;
}

.text-block-17 {
  margin-top: 10px;
  margin-bottom: 5px;
}

.image-14, .image-15, .image-16, .paragraph-12, .paragraph-13, .image-17, .image-18 {
  margin-bottom: 10px;
}

.image-19 {
  margin-top: 10px;
}

.image-20, .image-21 {
  margin-top: 10px;
  margin-bottom: 10px;
}

.bold-text-5, .bold-text-6 {
  color: var(--steel-blue);
}

.text-block-18 {
  border: 0 solid #000;
  border-radius: 3px;
  margin-bottom: 0;
}

.text-block-19 {
  margin-top: 0;
  margin-bottom: 0;
}

.image-22 {
  margin-bottom: 10px;
}
/* ... */

